Minor correction and re-order references.

--- a/paper/tsne_embedding.tex
+++ b/paper/tsne_embedding.tex
@@ -22,7 +22,7 @@
 
 \begin{document}
 %
-\title{Embedding to Reference t-SNE Space Adresses Batch-Effects in Single-Cell Classification}
+\title{Embedding to Reference t-SNE Space Adresses Batch Effects in Single-Cell Classification}
 %
 \titlerunning{t-SNE Embedding and Batch Effects}
 %
@@ -119,7 +119,7 @@ source.} \label{fig:batch_effect}
 Current solutions to embedding the data from various data sources address the
 batch effect problems up-front. The data is typically preprocessed and
 transformed such that the batch effects are explicitly
-removed. Recently proposed procedures for batch-effect removal include
+removed. Recently proposed procedures for batch effect removal include
 canonical correlation analysis~\cite{cca} and mutual
 nearest-neighbors~\cite{mnn,seurat}.
 In these works, batch effects are deemed removed when cells from different sources exhibit good mixing in a t-SNE visualization.
@@ -637,6 +637,7 @@ and by the BioPharm.SI project supported from European Regional Development
 Fund and the Slovenian Ministry of Education, Science and Sport. We would also
 like to thank Dmitry Kobak for discussions on t-SNE.
 
-\bibliographystyle{splncs04}
+% \bibliographystyle{splncs04}
+\bibliographystyle{unsrt}
 \bibliography{references}
 \end{document}
