--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,5 +1,5 @@
 @inproceedings{sne,
-  title={Stochastic neighbor embedding},
+  title={{Stochastic neighbor embedding}},
   author={Hinton, Geoffrey E and Roweis, Sam T},
   booktitle={Advances in Neural Information Processing Systems},
   pages={857--864},
@@ -7,7 +7,7 @@
 }
 
 @article{tsne,
-  title={Visualizing data using t-SNE},
+  title={{Visualizing data using t-SNE}},
   author={van der Maaten, Laurens and Hinton, Geoffrey},
   journal={Journal of Machine Learning Research},
   volume={9},
@@ -18,7 +18,7 @@
 
 
 @article{bh_tsne,
-  title={Accelerating t-SNE using tree-based algorithms.},
+  title={{Accelerating t-SNE using tree-based algorithms.}},
   author={van der Maaten, Laurens},
   journal={Journal of Machine Learning Research},
   volume={15},
@@ -28,7 +28,7 @@
 }
 
 @article{momentum,
-  title={Increased rates of convergence through learning rate adaptation},
+  title={{Increased rates of convergence through learning rate adaptation}},
   author={Jacobs, Robert A},
   journal={Neural Networks},
   volume={1},
@@ -39,7 +39,7 @@
 }
 
 @article{fi_tsne,
-  title={Fast interpolation-based t-SNE for improved visualization of single-cell RNA-seq data},
+  title={{Fast interpolation-based t-SNE for improved visualization of single-cell RNA-seq data}},
   author={Linderman, George C and Rachh, Manas and Hoskins, Jeremy G and Steinerberger, Stefan and Kluger, Yuval},
   journal={Nature Methods},
   volume={16},
@@ -51,7 +51,7 @@
 
 
 @article{multiscale_tsne,
-  title={Multi-scale similarities in stochastic neighbour embedding: Reducing dimensionality while preserving both local and global structure},
+  title={{Multi-scale similarities in stochastic neighbour embedding: Reducing dimensionality while preserving both local and global structure}},
   author={Lee, John A and Peluffo-Ord{\'o}{\~n}ez, Diego H and Verleysen, Michel},
   journal={Neurocomputing},
   volume={169},
@@ -62,7 +62,7 @@
 
 
 @article{art_of_using_tsne,
-  title={The art of using t-SNE for single-cell transcriptomics},
+  title={{The art of using t-SNE for single-cell transcriptomics}},
   author={Kobak, Dmitry and Berens, Philipp},
   journal={bioRxiv},
   pages={453449},
@@ -73,7 +73,7 @@
 
 % TRANSFORM
 @inproceedings{parametric_tsne,
-  title={Learning a parametric embedding by preserving local structure},
+  title={{Learning a parametric embedding by preserving local structure}},
   author={Maaten, Laurens},
   booktitle={Artificial Intelligence and Statistics},
   pages={384--391},
@@ -82,7 +82,7 @@
 
 
 @article{kernel_tsne_transform,
-  title={Parametric nonlinear dimensionality reduction using kernel t-SNE},
+  title={{Parametric nonlinear dimensionality reduction using kernel t-SNE}},
   author={Gisbrecht, Andrej and Schulz, Alexander and Hammer, Barbara},
   journal={Neurocomputing},
   volume={147},
@@ -95,7 +95,7 @@
 % DATA SETS
 % pancreas
 @article{baron2016,
-  title={A single-cell transcriptomic map of the human and mouse pancreas reveals inter-and intra-cell population structure},
+  title={{A single-cell transcriptomic map of the human and mouse pancreas reveals inter-and intra-cell population structure}},
   author={Baron, Maayan and Veres, Adrian and Wolock, Samuel L and Faust, Aubrey L and Gaujoux, Renaud and Vetere, Amedeo and Ryu, Jennifer Hyoje and Wagner, Bridget K and Shen-Orr, Shai S and Klein, Allon M and others},
   journal={Cell Systems},
   volume={3},
@@ -106,7 +106,7 @@
 }
 
 @article{xin2016,
-  title={RNA sequencing of single human islet cells reveals type 2 diabetes genes},
+  title={{RNA sequencing of single human islet cells reveals type 2 diabetes genes}},
   author={Xin, Yurong and Kim, Jinrang and Okamoto, Haruka and Ni, Min and Wei, Yi and Adler, Christina and Murphy, Andrew J and Yancopoulos, George D and Lin, Calvin and Gromada, Jesper},
   journal={Cell Metabolism},
   volume={24},
@@ -118,7 +118,7 @@
 
 % brain
 @article{hrvatin2018,
-  title={Single-cell analysis of experience-dependent transcriptomic states in the mouse visual cortex},
+  title={{Single-cell analysis of experience-dependent transcriptomic states in the mouse visual cortex}},
   author={Hrvatin, Sinisa and Hochbaum, Daniel R and Nagy, M Aurel and Cicconet, Marcelo and Robertson, Keiramarie and Cheadle, Lucas and Zilionis, Rapolas and Ratner, Alex and Borges-Monroy, Rebeca and Klein, Allon M and others},
   journal={Nature Neuroscience},
   volume={21},
@@ -129,7 +129,7 @@
 }
 
 @article{chen2017,
-  title={Single-cell RNA-seq reveals hypothalamic cell diversity},
+  title={{Single-cell RNA-seq reveals hypothalamic cell diversity}},
   author={Chen, Renchao and Wu, Xiaoji and Jiang, Lan and Zhang, Yi},
   journal={Cell Reports},
   volume={18},
@@ -141,7 +141,7 @@
 
 % retina
 @article{macosko2015,
-  title={Highly parallel genome-wide expression profiling of individual cells using nanoliter droplets},
+  title={{Highly parallel genome-wide expression profiling of individual cells using nanoliter droplets}},
   author={Macosko, Evan Z and Basu, Anindita and Satija, Rahul and Nemesh, James and Shekhar, Karthik and Goldman, Melissa and Tirosh, Itay and Bialas, Allison R and Kamitaki, Nolan and Martersteck, Emily M and others},
   journal={Cell},
   volume={161},
@@ -152,7 +152,7 @@
 }
 
 @article{shekhar2016,
-  title={Comprehensive classification of retinal bipolar neurons by single-cell transcriptomics},
+  title={{Comprehensive classification of retinal bipolar neurons by single-cell transcriptomics}},
   author={Shekhar, Karthik and Lapan, Sylvain W and Whitney, Irene E and Tran, Nicholas M and Macosko, Evan Z and Kowalczyk, Monika and Adiconis, Xian and Levin, Joshua Z and Nemesh, James and Goldman, Melissa and others},
   journal={Cell},
   volume={166},
@@ -166,8 +166,8 @@
 % OTHER
 @article{umap,
      author = {{McInnes}, L. and {Healy}, J. and {Melville}, J.},
-     title = "{UMAP: Uniform Manifold Approximation
-     and Projection for Dimension Reduction}",
+     title = {{UMAP: Uniform Manifold Approximation
+     and Projection for Dimension Reduction}},
      journal = {ArXiv e-prints},
      archivePrefix = "arXiv",
      eprint = {1802.03426},
@@ -180,7 +180,7 @@
 }
 
 @article{umap_single_cell,
-  title={Dimensionality reduction for visualizing single-cell data using UMAP},
+  title={{Dimensionality reduction for visualizing single-cell data using UMAP}},
   author={Becht, Etienne and McInnes, Leland and Healy, John and Dutertre, Charles-Antoine and Kwok, Immanuel WH and Ng, Lai Guan and Ginhoux, Florent and Newell, Evan W},
   journal={Nature Biotechnology},
   volume={37},
@@ -191,7 +191,7 @@
 }
 
 @article{distill,
-  title={How to use t-SNE effectively},
+  title={{How to use t-SNE effectively}},
   author={Wattenberg, Martin and Vi{\'e}gas, Fernanda and Johnson, Ian},
   journal={Distill},
   volume={1},
@@ -201,7 +201,7 @@
 }
 
 @article{cca,
-  title={Integrating single-cell transcriptomic data across different conditions, technologies, and species},
+  title={{Integrating single-cell transcriptomic data across different conditions, technologies, and species}},
   author={Butler, Andrew and Hoffman, Paul and Smibert, Peter and Papalexi, Efthymia and Satija, Rahul},
   journal={Nature Biotechnology},
   volume={36},
@@ -212,7 +212,7 @@
 }
 
 @article{mnn,
-  title={Batch effects in single-cell RNA-sequencing data are corrected by matching mutual nearest neighbors},
+  title={{Batch effects in single-cell RNA-sequencing data are corrected by matching mutual nearest neighbors}},
   author={Haghverdi, Laleh and Lun, Aaron TL and Morgan, Michael D and Marioni, John C},
   journal={Nature Biotechnology},
   volume={36},
@@ -223,7 +223,7 @@
 }
 
 @article{seurat,
-  title={Comprehensive Integration of Single-Cell Data},
+  title={{Comprehensive Integration of Single-Cell Data}},
   author={Stuart, Tim and Butler, Andrew and Hoffman, Paul and Hafemeister, Christoph and Papalexi, Efthymia and Mauck III, William M and Hao, Yuhan and Stoeckius, Marlon and Smibert, Peter and Satija, Rahul},
   journal={Cell},
   year={2019},
@@ -231,7 +231,7 @@
 }
 
 @article{cell_ontology,
-  title={An ontology for cell types},
+  title={{An ontology for cell types}},
   author={Bard, Jonathan and Rhee, Seung Y and Ashburner, Michael},
   journal={Genome Biology},
   volume={6},
@@ -242,7 +242,7 @@
 }
 
 @article{Domingos2012-CACM,
-  title={A few useful things to know about machine learning.},
+  title={{A few useful things to know about machine learning.}},
   author={Domingos, Pedro M},
   journal={Communications fo the ACM},
   volume={55},
@@ -252,7 +252,7 @@
 }
 
 @article{scanpy,
-  title={SCANPY: large-scale single-cell gene expression data analysis},
+  title={{SCANPY: large-scale single-cell gene expression data analysis}},
   author={Wolf, F Alexander and Angerer, Philipp and Theis, Fabian J},
   journal={Genome Biology},
   volume={19},
@@ -263,7 +263,7 @@
 }
 
 @inproceedings{domain_shift,
-  title={Domain adaptation for object recognition: An unsupervised approach},
+  title={{Domain adaptation for object recognition: An unsupervised approach}},
   author={Gopalan, Raghuraman and Li, Ruonan and Chellappa, Rama},
   booktitle={2011 International Conference on Computer Vision},
   pages={999--1006},
@@ -272,7 +272,7 @@
 }
 
 @article{covariate_shift,
-  title={Discriminative learning under covariate shift},
+  title={{Discriminative learning under covariate shift}},
   author={Bickel, Steffen and Br{\"u}ckner, Michael and Scheffer, Tobias},
   journal={Journal of Machine Learning Research},
   volume={10},
@@ -282,14 +282,14 @@
 }
 
 @book{dataset_shift,
-  title={Dataset shift in machine learning},
+  title={{Dataset shift in machine learning}},
   author={Quionero-Candela, Joaquin and Sugiyama, Masashi and Schwaighofer, Anton and Lawrence, Neil D},
   year={2009},
   publisher={The MIT Press}
 }
 
 @article{umi,
-  title={Quantitative single-cell RNA-seq with unique molecular identifiers},
+  title={{Quantitative single-cell RNA-seq with unique molecular identifiers}},
   author={Islam, Saiful and Zeisel, Amit and Joost, Simon and La Manno, Gioele and Zajac, Pawel and Kasper, Maria and L{\"o}nnerberg, Peter and Linnarsson, Sten},
   journal={Nature Methods},
   volume={11},
@@ -300,7 +300,7 @@
 }
 
 @article{hca,
-  title={The Human Cell Atlas: from vision to reality},
+  title={{The Human Cell Atlas: from vision to reality}},
   author={Rozenblatt-Rosen, Orit and Stubbington, Michael JT and Regev, Aviv and Teichmann, Sarah A},
   journal={Nature News},
   volume={550},
@@ -310,7 +310,7 @@
 }
 
 @article{scmap,
-  title={scmap: projection of single-cell RNA-seq data across data sets},
+  title={{scmap: projection of single-cell RNA-seq data across data sets}},
   author={Kiselev, Vladimir Yu and Yiu, Andrew and Hemberg, Martin},
   journal={Nature Methods},
   volume={15},
